PROJECT(VoxelMesh)

INCLUDE_DIRECTORIES( ${IAFEMMESH_SOURCE_DIR}/Code/Mesh ${IAFEMMESH_BINARY_DIR}/Code/Mesh )
INCLUDE_DIRECTORIES( ${IAFEMMESH_SOURCE_DIR}/Code/IO ${IAFEMMESH_BINARY_DIR}/Code/IO )
INCLUDE_DIRECTORIES( ${IAFEMMESH_SOURCE_DIR}/Code/Adapter ${IAFEMMESH_BINARY_DIR}/Code/Adapter )
INCLUDE_DIRECTORIES( ${IAFEMMESH_SOURCE_DIR}/Code/Widgets ${IAFEMMESH_BINARY_DIR}/Code/Widgets )


ADD_EXECUTABLE(VoxelMesh VoxelMesh.cxx )
TARGET_LINK_LIBRARIES(VoxelMesh iamAdapter ITKCommon ITKBasicFilters ITKIO vtkIO vtkHybrid vtkFiltering vtkCommon)


INSTALL(TARGETS VoxelMesh RUNTIME DESTINATION bin)
